# ships

./: .gitignore  AGENTS.md  Dockerfile  Gemfile  README.md  WHAT_AND_WHY.md  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  todo.md  wak.toml
.github/workflows/: ci.yml
app/controllers/: admin_controller.rb  application_controller.rb  dashboard_controller.rb  docs_controller.rb  sessions_controller.rb  stats_controller.rb  voting_controller.rb  webhooks_controller.rb  ysws_entries_controller.rb
app/helpers/: application_helper.rb  cached_image_helper.rb  card_helper.rb
app/javascript/: three_app.ts
app/jobs/: airtable_job.rb  cache_image_job.rb  fetch_screenshots_job.rb  fetch_slack_display_names_job.rb  rating_stats_job.rb  viral_notification_job.rb  webhook_delivery_job.rb
app/models/: cached_image.rb  elo_match.rb  project_rating.rb  user.rb  webhook_subscription.rb  ysws_project_entry.rb
app/services/: elo_match_service.rb  hackclub_airtable.rb
config/: application.rb  blazer.yml  credentials.yml.enc  database.yml  deploy.yml  recurring.yml  routes.rb  vite.json
config/environments/: production.rb
config/initializers/: content_security_policy.rb  mission_control.rb  omniauth.rb  rack_attack.rb
db/: cache_schema.rb  queue_schema.rb  schema.rb  seeds.rb
db/seeds/: full_ysws_db.rb
public/: ship.gltf  ship_lod1.gltf  ship_lod2.gltf  ship_lod3.gltf  ship_lod4.gltf  ship_lod5.gltf  ship_lodx.gltf
server/: Cargo.toml  Dockerfile
server/src/: lib.rs  main.rs
src/: gpu.ts  main.ts  style.css  utils.ts
(+57 files in other folders)
