[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = { version = "4.10.2", features = ["__compress"] }
csv = "1.3.1"
deadpool-postgres = { version = "0.14.1" }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["parsing", "serde"] }
tokio = "1.44.1"
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1", "with-time-0_3"] }
